Fixed spacing in icons, changed sections orders, adjusted images responsiviness, fixed footer a and paddings

--- a/css/app.css
+++ b/css/app.css
@@ -69,9 +69,22 @@ header ul li a {
 }
 
 .article-tag {
-  bottom: 0;
-  background-color: #fff;
   color: red;
+  background-color: #fff;
+}
+
+.pre-line {
+  white-space: pre-line;
+}
+
+.bg-tag {
+  background-color: #c2d3d6;
+  color: #3a3b3b;
+}
+
+.article-tag,
+.bg-tag {
+  bottom: 0;
   font-weight: 600;
   opacity: 0.9;
   padding: 5px 12px;
@@ -211,14 +224,13 @@ header ul li input:focus {
     height: 241px;
   }
 
-  .magazines-cover {
-    position: relative;
+  #magazine .img-responsive-size {
+    width: 100%;
+    height: 162px;
   }
 
-  img.img-responsive-size,
-  .centering-img {
-    min-width: 242px;
-    max-width: 162px;
+  .magazines-cover {
+    position: relative;
   }
 
   #editors-pick img.img-responsive-size,
@@ -282,6 +294,11 @@ header ul li input:focus {
     height: 2660px;
   }
 
+  #editors-pick .img-responsive-size {
+    max-width: 218px;
+    max-height: 145px;
+  }
+
   #subscribe img {
     height: 300px;
   }
@@ -289,10 +306,10 @@ header ul li input:focus {
   .sticky3 {
     position: sticky;
     top: 0;
-    height: 1136px;
+    height: 1400px;
   }
 
-  img.img-responsive-size,
+  #magazine img.img-responsive-size,
   .centering-img {
     min-width: 290px;
     max-width: 435px;
